--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -2255,32 +2255,134 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jAg-XN-udr" userLabel="Mutual Friends Collection View">
+                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="82" id="GaO-a8-cN1">
+                                                                <variation key="widthClass=compact" constant="40"/>
+                                                            </constraint>
+                                                        </constraints>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="20" id="Fv8-V4-E6e">
+                                                            <size key="itemSize" width="50" height="40"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells>
+                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Friend Cell" id="LZH-qX-WpN" customClass="CaronaeRiderCell">
+                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="40"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile Picture" translatesAutoresizingMaskIntoConstraints="NO" id="BwN-Em-uzF" userLabel="Rider photo">
+                                                                            <rect key="frame" x="20" y="20" width="50" height="50"/>
+                                                                            <gestureRecognizers/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" secondItem="BwN-Em-uzF" secondAttribute="height" multiplier="1:1" id="6nQ-Dd-kZP"/>
+                                                                                <constraint firstAttribute="width" constant="40" id="reN-lk-4eU"/>
+                                                                            </constraints>
+                                                                            <userDefinedRuntimeAttributes>
+                                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                                    <integer key="value" value="20"/>
+                                                                                </userDefinedRuntimeAttribute>
+                                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                                            </userDefinedRuntimeAttributes>
+                                                                            <variation key="default">
+                                                                                <mask key="constraints">
+                                                                                    <exclude reference="reN-lk-4eU"/>
+                                                                                    <exclude reference="6nQ-Dd-kZP"/>
+                                                                                </mask>
+                                                                            </variation>
+                                                                            <variation key="widthClass=compact">
+                                                                                <mask key="constraints">
+                                                                                    <include reference="reN-lk-4eU"/>
+                                                                                    <include reference="6nQ-Dd-kZP"/>
+                                                                                </mask>
+                                                                            </variation>
+                                                                        </imageView>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                </view>
+                                                                <constraints>
+                                                                    <constraint firstItem="BwN-Em-uzF" firstAttribute="centerX" secondItem="LZH-qX-WpN" secondAttribute="centerX" id="7cj-hz-jFV"/>
+                                                                    <constraint firstAttribute="top" secondItem="BwN-Em-uzF" secondAttribute="top" id="aQg-BF-SZI"/>
+                                                                </constraints>
+                                                                <variation key="default">
+                                                                    <mask key="subviews">
+                                                                        <exclude reference="BwN-Em-uzF"/>
+                                                                    </mask>
+                                                                    <mask key="constraints">
+                                                                        <exclude reference="7cj-hz-jFV"/>
+                                                                        <exclude reference="aQg-BF-SZI"/>
+                                                                    </mask>
+                                                                </variation>
+                                                                <variation key="widthClass=compact">
+                                                                    <mask key="subviews">
+                                                                        <include reference="BwN-Em-uzF"/>
+                                                                    </mask>
+                                                                    <mask key="constraints">
+                                                                        <include reference="7cj-hz-jFV"/>
+                                                                        <include reference="aQg-BF-SZI"/>
+                                                                    </mask>
+                                                                </variation>
+                                                                <connections>
+                                                                    <outlet property="photo" destination="BwN-Em-uzF" id="AYQ-q0-Ea6"/>
+                                                                </connections>
+                                                            </collectionViewCell>
+                                                        </cells>
+                                                        <variation key="default">
+                                                            <mask key="constraints">
+                                                                <exclude reference="GaO-a8-cN1"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <variation key="widthClass=compact">
+                                                            <mask key="constraints">
+                                                                <include reference="GaO-a8-cN1"/>
+                                                            </mask>
+                                                        </variation>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="hXu-7Y-tvn" id="Hwz-qN-Ggy"/>
+                                                            <outlet property="delegate" destination="hXu-7Y-tvn" id="ZZu-E2-9mT"/>
+                                                        </connections>
+                                                    </collectionView>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="MmR-2o-zB8" firstAttribute="top" secondItem="Dux-0O-fyC" secondAttribute="top" id="623-j2-26r"/>
-                                                    <constraint firstAttribute="height" constant="30" id="swz-wp-Ctk">
-                                                        <variation key="widthClass=compact" constant="50"/>
-                                                    </constraint>
+                                                    <constraint firstAttribute="trailing" secondItem="jAg-XN-udr" secondAttribute="trailing" id="7Pi-4o-0aK"/>
+                                                    <constraint firstItem="jAg-XN-udr" firstAttribute="leading" secondItem="MmR-2o-zB8" secondAttribute="leading" id="864-Wf-fa3"/>
+                                                    <constraint firstItem="jAg-XN-udr" firstAttribute="top" secondItem="MmR-2o-zB8" secondAttribute="bottom" constant="8" id="k9S-Em-Q6c"/>
+                                                    <constraint firstAttribute="height" constant="100" id="swz-wp-Ctk"/>
                                                     <constraint firstItem="MmR-2o-zB8" firstAttribute="leading" secondItem="Dux-0O-fyC" secondAttribute="leading" id="vTm-NL-FFL"/>
                                                 </constraints>
                                                 <variation key="default">
                                                     <mask key="subviews">
                                                         <exclude reference="MmR-2o-zB8"/>
+                                                        <exclude reference="jAg-XN-udr"/>
                                                     </mask>
                                                     <mask key="constraints">
                                                         <exclude reference="swz-wp-Ctk"/>
                                                         <exclude reference="623-j2-26r"/>
                                                         <exclude reference="vTm-NL-FFL"/>
+                                                        <exclude reference="7Pi-4o-0aK"/>
+                                                        <exclude reference="864-Wf-fa3"/>
+                                                        <exclude reference="k9S-Em-Q6c"/>
                                                     </mask>
                                                 </variation>
                                                 <variation key="widthClass=compact">
                                                     <mask key="subviews">
                                                         <include reference="MmR-2o-zB8"/>
+                                                        <include reference="jAg-XN-udr"/>
                                                     </mask>
                                                     <mask key="constraints">
                                                         <include reference="swz-wp-Ctk"/>
                                                         <include reference="623-j2-26r"/>
                                                         <include reference="vTm-NL-FFL"/>
+                                                        <include reference="7Pi-4o-0aK"/>
+                                                        <include reference="864-Wf-fa3"/>
+                                                        <include reference="k9S-Em-Q6c"/>
                                                     </mask>
                                                 </variation>
                                             </view>
@@ -2671,8 +2773,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                                         <exclude reference="rtV-71-yGf"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="64" width="400" height="592"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="Kiw-qC-kJK"/>
                                         <include reference="T1v-DT-0Ay"/>
@@ -2727,6 +2828,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                         <outlet property="courseLabel" destination="Zrg-TJ-yD0" id="fuh-7x-iR1"/>
                         <outlet property="editButton" destination="dfm-uL-SYV" id="Ar5-gv-pE4"/>
                         <outlet property="joinedDateLabel" destination="jgn-kJ-4Ss" id="eQ2-gf-Bdj"/>
+                        <outlet property="mutualFriendsCollectionView" destination="jAg-XN-udr" id="dfZ-xC-oOn"/>
                         <outlet property="mutualFriendsLabel" destination="MmR-2o-zB8" id="a2e-Q8-Ngd"/>
                         <outlet property="mutualFriendsView" destination="Dux-0O-fyC" id="NRR-Au-UjA"/>
                         <outlet property="nameLabel" destination="eBR-ef-vDK" id="lvz-ZA-IQP"/>
@@ -6738,11 +6840,11 @@ FOTO</string>
         <image name="menu4" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="iap-vV-xAI"/>
-        <segue reference="kXd-xG-sw3"/>
-        <segue reference="7VR-Dw-svl"/>
         <segue reference="AOI-Sr-h8h"/>
+        <segue reference="iap-vV-xAI"/>
         <segue reference="tug-g2-rGR"/>
+        <segue reference="H8O-Mc-OH3"/>
+        <segue reference="7VR-Dw-svl"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
 </document>
